<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".login"
    android:focusableInTouchMode="false"
    android:background="@android:color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:id="@+id/textView"
        android:textSize="20sp"
        android:textColor="@color/loginvert"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextUserName"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/Nom"
        android:textColor="@color/noir"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:textSize="20sp"
        android:paddingLeft="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mot_de_pass"
        android:id="@+id/textView2"
        android:textSize="20sp"
        android:textColor="@color/loginvert"
        android:layout_marginLeft="16dp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:id="@+id/editTextPassword"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:password="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:hint="@string/Mot_de_passe"
        android:textSize="20sp"
        android:paddingLeft="5dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Memoriser_moi"
        android:id="@+id/loginRememberMeIPCheckBox"
        android:layout_marginLeft="10dp"
        android:checked="false" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"
        android:onClick="invokeLogin"
        android:background="@drawable/shape_button_login"
        android:id="@+id/button"
        android:textSize="25sp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textStyle="bold"
        android:layout_marginTop="5dp" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/temperature"
            android:layout_centerInParent="true"
            android:id="@+id/temperature"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="By Yihao and Thomas at Polytech Nantes"
            android:id="@+id/textView3"
            android:layout_alignParentBottom="true"
            android:textIsSelectable="false"
            android:textStyle="italic"
            android:typeface="serif"
            android:textSize="8dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="1dp" />
    </RelativeLayout>

</LinearLayout>

